Make RPCConfig immutable, prefer URI to URL